tests/compile-fail/stacked_borrows/shr_frozen_violation1.stderr
error: Undefined Behavior: attempting a write access using <untagged> at alloc957[0x0], but that tag only grants SharedReadOnly permission for this location
  --> $DIR/shr_frozen_violation1.rs:12:14
   |
LL |     unsafe { *(x as *const i32 as *mut i32) = 7; } //~ ERROR only grants SharedReadOnly permission
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |              |
   |              attempting a write access using <untagged> at alloc957[0x0], but that tag only grants SharedReadOnly permission for this location
   |              this error occurs as part of an access at alloc957[0x0..0x4]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
           
   = note: inside `unknown_code` at $DIR/shr_frozen_violation1.rs:12:14
note: inside `foo` at $DIR/shr_frozen_violation1.rs:3:3
  --> $DIR/shr_frozen_violation1.rs:3:3
   |
LL |   unknown_code(&*x);
   |   ^^^^^^^^^^^^^^^^^
note: inside `main` at $DIR/shr_frozen_violation1.rs:8:20
  --> $DIR/shr_frozen_violation1.rs:8:20
   |
LL |     println!("{}", foo(&mut 0));
   |                    ^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

